--- a/task1.ipynb
+++ b/task1.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "markdown",
    "id": "87d5b101-6009-4fe0-8eb6-6ba026121219",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -13,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "id": "458cbf84-ded2-485c-84b8-63cd9025f16d",
    "metadata": {
     "tags": []
@@ -52,15 +51,11 @@
     "\n",
     "\n",
     "def remove_first_escape(str_value):\n",
-    "    if str_value.startswith('\\n'):\n",
-    "        return str_value[1:]\n",
-    "    else:\n",
-    "        return str_value\n",
+    "    return str_value[1:] if str_value.startswith('\\n') else str_value\n",
     "\n",
     "    \n",
     "def convert_list_to_dict(lst):\n",
-    "    res_dct = {lst[i]: lst[i + 1] for i in range(0, len(lst), 2)}\n",
-    "    return res_dct\n"
+    "    return {lst[i]: lst[i + 1] for i in range(0, len(lst), 2)}\n"
    ]
   },
   {
