--- a/task1.ipynb
+++ b/task1.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b791cd6-7dd6-4ac6-91f1-1f3eb3a0bc93",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!pip install clickhouse-connect overrides pandas"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "87d5b101-6009-4fe0-8eb6-6ba026121219",
    "metadata": {
@@ -60,37 +72,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e5f87cb-5029-4560-8c2d-1a184b0235fa",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "##### Ручные корретировки на данном датасете (все строки с колонкой Seller-Type = 'Individual' внесены некорректно)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "8cace04e-ff20-4d14-8f1f-1069b7449bd8",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def apply_manual_adj_with_honda_dataset(row: dict):\n",
-    "    if row.get('Seller_Type', None) == 'Individual':\n",
-    "        row['Mileage'] = int(row['VIN'].split(' ')[0].replace(',', ''))\n",
-    "        row['VIN'] = row['Engine']\n",
-    "        row['Engine'] = row['Transmission']\n",
-    "        row['Transmission'] = row['Fuel_Type']\n",
-    "        row['Stock_#'] = ''\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "f5c7047e-7f72-4c3f-a856-bb05ba504190",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -419,6 +403,34 @@
     "    client.command(get_create_query_based_on_csv_file(path_to_csv_file, table_name, table_engine, order_column_names, partition_column_names))\n",
     "    do_insert_timed(client, path_to_csv_file, table_name, batch_size, inserter, apply_manual_adj)\n",
     "    client.command(get_delete_query(table_name))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e5f87cb-5029-4560-8c2d-1a184b0235fa",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "##### Ручные корретировки на данном датасете (все строки с колонкой Seller-Type = 'Individual' внесены некорректно)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8cace04e-ff20-4d14-8f1f-1069b7449bd8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def apply_manual_adj_with_honda_dataset(row: dict):\n",
+    "    if row.get('Seller_Type', None) == 'Individual':\n",
+    "        row['Mileage'] = int(row['VIN'].split(' ')[0].replace(',', ''))\n",
+    "        row['VIN'] = row['Engine']\n",
+    "        row['Engine'] = row['Transmission']\n",
+    "        row['Transmission'] = row['Fuel_Type']\n",
+    "        row['Stock_#'] = ''\n"
    ]
   },
   {
